--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <!-- Material Design Color palette from : http://www.google.com/design/spec/style/color.html or http://www.materialui.co/colors -->
 
+    <color name="error_color">#C62828</color>
     <!--Reds-->
     <color name="red_50">#FFEBEE</color>
     <color name="red_100">#FFCDD2</color>
