create profile commits

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rootLayoutOfLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.login.LoginActivity">
+    tools:context=".activity.auth.login.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
