--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/rootLayoutOfForgotPassword"
     android:layout_height="match_parent"
-    tools:context=".activity.forgotpassword.ForgotPasswordActivity">
+    tools:context=".activity.auth.forgotpassword.ForgotPasswordActivity">
 
     <include
         android:id="@+id/header"
