create profile with edit commit

--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -209,7 +209,7 @@
                 android:layout_height="@dimen/_52sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Create Profile"
+                android:text="Create"
                 android:textAllCaps="false"
 
                 android:textAppearance="@style/InputTextAppearance"
