--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -31,6 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_12ssp"
+                android:textAlignment="center"
                 android:fontFamily="@font/montserrat_semibold"
                 android:text="Create your profile for activating your services of Room Rental."
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
