--- a/app/src/main/res/layout/activity_landlord_main.xml
+++ b/app/src/main/res/layout/activity_landlord_main.xml
@@ -6,4 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".landlord.activity.main.LandlordMainActivity">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <FrameLayout
+            android:id="@+id/fragmentContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/_50sdp"/>
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_gravity="bottom"
+            app:fabCradleMargin="@dimen/_8sdp"
+            app:fabCradleVerticalOffset="@dimen/_8sdp"
+            app:fabCradleRoundedCornerRadius="@dimen/_12sdp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_16sdp"
+                android:background="@android:color/transparent"
+                app:menu="@menu/bottom_navigation_menu_items"
+
+                app:itemTextAppearanceActive="@style/BottomNavigationView"
+                app:itemTextAppearanceInactive="@style/BottomNavigationView"
+                app:itemIconSize="@dimen/_22sdp"/>
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabCreateProperty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchor="@id/bottomAppBar"
+            app:tint="@color/white"
+            android:src="@drawable/ic_add"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
