--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -26,18 +26,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/noteTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/_12ssp"
-                android:textAlignment="center"
-                android:fontFamily="@font/montserrat_semibold"
-                android:text="Create your profile for activating your services of Room Rental."
-                app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
-                app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/guideline_top_horizontal"/>
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profileImageView"
                 android:layout_width="@dimen/_100sdp"
@@ -48,7 +36,7 @@
                 android:layout_marginTop="@dimen/_8sdp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end_vertical"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/noteTextView"/>
+                app:layout_constraintTop_toBottomOf="@+id/guideline_top_horizontal"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/cameraImageView"
@@ -217,7 +205,7 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/createProfileBtn"
+                android:id="@+id/updaterProfileBtn"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_52sdp"
                 android:layout_marginTop="@dimen/_16sdp"
