--- a/app/src/main/res/layout/fragment_my_property.xml
+++ b/app/src/main/res/layout/fragment_my_property.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".landlord.fragments.MyPropertyFragment">
+    tools:context=".landlord.activity.fragments.home.MyPropertyFragment">
 
     <ImageView
         android:id="@+id/homeImageView"
