--- a/app/src/main/res/layout/header_toolbar.xml
+++ b/app/src/main/res/layout/header_toolbar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/default_color"
     android:id="@+id/rootLayoutOfHeader"
     android:orientation="vertical">
 
@@ -27,9 +28,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:fontFamily="@font/montserrat_semibold"
+            android:fontFamily="@font/montserrat_medium"
             android:text="Title"
-            android:textColor="@color/black_text_secondary"
+            android:textColor="@color/white"
             android:textSize="@dimen/_16sdp"
             app:layout_constraintBottom_toBottomOf="@+id/backImageView"
             app:layout_constraintStart_toEndOf="@+id/backImageView"
@@ -37,10 +38,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="@dimen/_18sdp"-->
-<!--        android:background="@drawable/design_right_top_corner"/>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_18sdp"
+        android:background="@drawable/design_right_top_corner"/>
 
 
 </LinearLayout>
