--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.RoomRental" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/indigo_600</item>
-        <item name="colorPrimaryVariant">@color/indigo_800</item>
+        <item name="colorPrimary">@color/app_default_color</item>
+        <item name="colorPrimaryVariant">@color/app_default_color</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/indigo_600</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/app_default_color</item>
+        <item name="colorSecondaryVariant">@color/app_default_color</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/white</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@color/app_default_color</item>
+<!--        <item name="android:windowLightStatusBar">true</item>-->
         <!-- Customize your theme here. -->
 
 <!--        <item name="android:windowTranslucentStatus">true</item>-->
-
-
 
         <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
     </style>
@@ -51,6 +49,19 @@
         <item name="helperTextTextAppearance">@style/HintTextAppearance</item>
     </style>
 
+    <style name="SpinnerInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="android:textColorHint">@color/black_text_disabled</item>
+        <item name="hintTextAppearance">@style/HintTextAppearance</item>
+
+        <item name="boxStrokeErrorColor">@color/error_color</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="errorTextColor">@color/error_color</item>
+        <item name="errorTextAppearance">@style/HintTextAppearance</item>
+
+        <item name="helperTextTextColor">@color/black_text_disabled</item>
+        <item name="helperTextTextAppearance">@style/HintTextAppearance</item>
+    </style>
+
     <style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
     </style>
@@ -65,6 +76,12 @@
         <item name="cornerSizeTopLeft">16dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <style name="SpinnerTheme" parent="TextAppearance.AppCompat.Widget.TextView.SpinnerItem">
+        <item name="android:textColor">@color/black_text_secondary</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <!--   <item name="android:prompt">@string/app_name</item>-->
     </style>
 
 </resources>
